--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,8 @@
     "node_modules",
     "bower_components",
     "test",
-    "tests"
+    "tests",
+    "assets/components"
   ],
   "dependencies": {
     "jquery": "^3.2.1",
